--- a/raccolta.html
+++ b/raccolta.html
@@ -69,7 +69,7 @@
         display: flex;
         align-items: center;
         gap: 1rem;
-        padding-top: 40px; /* Added padding to prevent overlap */
+        padding-top: 20px;
     }
     .nav-icons a {
         color: #970a2c;
@@ -81,8 +81,11 @@
         transform: scale(1.1);
     }
     .nav-icons a:first-child {
-        font-weight: bold; /* Make back symbol more prominent */
-        font-size: 2rem; /* Increase size of back symbol */
+        font-weight: bold;
+        font-size: 2rem;
+    }
+    .content-section {
+        margin-top: 40px; /* Add margin to lower the content section */
     }
     .content-section > div {
         margin-bottom: 1.5rem;
