--- a/raccolta.html
+++ b/raccolta.html
@@ -78,46 +78,54 @@
             position: relative;
         }
 
+
+        
+
         .nav-icons {
-            position: absolute;
-            top: -40px;
-            left: 20px;
-            display: flex;
-            align-items: center;
-            gap: 2rem;
-            padding-top: 20px;
-        }
+    position: absolute;
+    top: -40px;
+    left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 3rem;  /* Increased from 2rem */
+    padding-top: 20px;
+}
 
-        .nav-icons a {
-            color: #970a2c;
-            font-size: 1.25rem;
-            text-decoration: none;
-            transition: transform 0.3s ease;
-            display: flex;
-            align-items: center;
-            height: 100%;
-        }
+.nav-icons a {
+    color: #970a2c;
+    font-size: 1.25rem;
+    text-decoration: none;
+    transition: transform 0.3s ease;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
 
-        .nav-icons a:hover {
-            transform: scale(1.1);
-        }
+.nav-icons a:hover {
+    transform: scale(1.1);
+}
 
-        .nav-icons a:first-child {
-            font-weight: bold;
-            font-size: 1.5rem;
-            position: relative;
-        }
+.nav-icons a:first-child {
+    font-weight: bold;
+    font-size: 1.8rem;  /* Increased from 1.5rem */
+    position: relative;
+    letter-spacing: 0.5rem;  /* Added letter-spacing for wider angle brackets */
+}
 
-        .nav-icons a:first-child::after {
-            content: '';
-            position: absolute;
-            left: calc(100% + 1rem);
-            top: 50%;
-            transform: translateY(-50%);
-            height: 20px;
-            width: 1px;
-            background-color: rgba(128, 128, 128, 0.3);
-        }
+.nav-icons a:first-child::after {
+    content: '';
+    position: absolute;
+    left: calc(100% + 1.5rem);  /* Increased from 1rem */
+    top: 50%;
+    transform: translateY(-50%);
+    height: 20px;
+    width: 1px;
+    background-color: rgba(128, 128, 128, 0.3);
+}
+
+
+
+        
 
         .content-section {
             margin-top: 40px;
