--- a/termini.html
+++ b/termini.html
@@ -51,10 +51,26 @@
            height: 40px;
        }
 
+       .print-button {
+           background: none;
+           border: none;
+           color: var(--primary);
+           font-size: 1.5rem;
+           cursor: pointer;
+           padding: 0;
+           margin-right: 1rem;
+           transition: transform 0.3s ease;
+       }
+
+       .print-button:hover {
+           transform: scale(1.2);
+       }
+
        .social-icons {
            display: flex;
            gap: 1rem;
            justify-content: flex-end;
+           align-items: center;
        }
 
        .social-icons a {
@@ -274,6 +290,9 @@
    <div class="top-banner">
         <img src="roma.png" alt="Logo Roma" class="roma-logo">
         <div class="social-icons">
+            <button onclick="window.print()" class="print-button" title="Stampa">
+                <i class="fas fa-print"></i>
+            </button>
             <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" aria-label="Facebook">
                 <i class="fab fa-facebook"></i>
             </a>
@@ -307,6 +326,7 @@
         <main>
             <h1>Donazione di libri</h1>
             <section>
+                <!-- Rest of the content remains the same as in the previous version -->
                 <h2>Criteri di Accettazione</h2>
                 <p>
                     L'acquisizione della donazione è subordinata ai seguenti criteri:
@@ -317,7 +337,6 @@
                     <li>Disponibilità effettiva di spazio</li>
                 </ul>
                 
-                <!-- Rest of the original content remains the same -->
                 <h2>Materiale Non Accettato</h2>
                 <ul>
                     <li>Libri in cattivo stato, sottolineati o danneggiati</li>
@@ -338,7 +357,6 @@
                     <li>Tesi di laurea</li>
                 </ul>
 
-                <!-- Rest of the content continues as in the original file -->
                 <h2>Procedura di Donazione</h2>
                 <p>
                     Per valutare i titoli, ti preghiamo di seguire questi passaggi:
