--- a/termini.html
+++ b/termini.html
@@ -108,13 +108,15 @@
            gap: 1rem;
        }
 
-       .content-wrapper {
-           max-width: 900px;
-           width: 100%;
-           margin: 2rem auto;
-           padding: 0 1rem;
-           position: relative;
-       }
+      .content-wrapper {
+    max-width: 900px;
+    width: 100%;
+    margin: 2rem auto;
+    padding: 0 1rem;
+    position: relative;
+    margin-top: 80px; /* Aggiungi questa linea per spostare il contenuto più in basso */
+}
+
 
        .nav-icons {
            position: absolute;
