--- a/termini.html
+++ b/termini.html
@@ -109,12 +109,14 @@
        }
 
 .content-wrapper {
-            max-width: 900px;
-            width: 100%;
-            margin: 2rem auto;
-            padding: 0 1rem;
-            position: relative;
-        }
+    max-width: 900px;
+    width: 100%;
+    margin: 2rem auto;
+    padding: 0 1rem;
+    position: relative;
+    margin-top: 60px; /* Aggiungi questa linea per spostare il contenuto più in basso */
+}
+
 
 
        .nav-icons {
