--- a/termini.html
+++ b/termini.html
@@ -120,14 +120,15 @@
 
 
        .nav-icons {
-           position: absolute;
-           top: -40px;
-           left: 20px;
-           display: flex;
-           align-items: center;
-           gap: 3rem;
-           padding-top: 20px;
-       }
+    position: absolute;
+    top: -60px; /* Sposta le icone più in alto */
+    left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+    padding-top: 20px;
+}
+
 
        .nav-icons a {
            color: #970a2c;
