--- a/termini.html
+++ b/termini.html
@@ -11,6 +11,14 @@
    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
    <style>
+
+
+  @media print {
+           /* Hide unnecessary elements */
+           .top-banner, header, .nav-icons, footer {
+               display: none !important;
+           }
+      
        * {
            max-width: 100%;
            box-sizing: border-box;
