--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
             gap: 1rem;
         }
 
-        .nav-icons {
-            position: absolute;
-            top: -60px;
-            left: 20px;
-            display: flex;
-            align-items: center;
-            gap: 3rem;
-            padding-top: 20px;
-        }
+       .nav-icons {
+    position: absolute;
+    top: 20px;  /* Changed from -60px to 20px */
+    left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+    padding-top: 20px;
+}
 
         .nav-icons a {
             color: #970a2c;
