--- a/index.html
+++ b/index.html
@@ -90,15 +90,25 @@
             gap: 1rem;
         }
 
-       .nav-icons {
+
+
+
+
+.content-wrapper {
+    position: relative;
+    padding-top: 60px;  /* Add padding to make space for the nav icons */
+}
+
+.nav-icons {
     position: absolute;
-    top: 20px;  /* Changed from -60px to 20px */
+    top: 0;
     left: 20px;
     display: flex;
     align-items: center;
     gap: 3rem;
-    padding-top: 20px;
 }
+
+        
 
         .nav-icons a {
             color: #970a2c;
