--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
     --accent: #8c1c13;     /* Bordeaux */
 }
 
+/* Sostituisci il pulsante di invio con il colore amaranto dell'intestazione */
+button[type="submit"] {
+    background-color: #970a2c !important;
+}
+
+/* Aggiorna i cerchietti numerati e il pulsante "Aggiungi Libro" con il colore rosso specificato */
 .book-counter {
-    background-color: var(--secondary);
+    background-color: #ff4347 !important;
 }
 
 .book-entry button[type="button"] {
-    background-color: var(--secondary);
-}
-
-button[type="submit"] {
-    background-color: var(--accent);
+    background-color: #ff4347 !important;
 }
 
 
