--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@ button[type="submit"] {
 }
 
 .book-entry button[type="button"] {
-    background: none;
-    color: #ff4347;
+    width: 100%;
+    padding: 0.75rem 1rem;
+    background-color: #ff4347;
+    color: white;
     border: none;
-    padding: 0;
-    font-size: 1.5rem;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+    border-radius: 0.375rem;
+    transition: background-color 0.3s ease;
+    margin-top: 0.5rem;
 }
 
 .book-entry button[type="button"]:hover {
-    transform: scale(1.2);
-    color: #d9292e; /* leggermente più scuro per l'effetto hover */
+    background-color: #d9292e;
 }
 
 
