--- a/termini.html
+++ b/termini.html
@@ -407,5 +407,9 @@
             </section>
         </main>
     </div>
+
+    <footer>
+        <p>Scopri di più su <a href="https://www.bibliotechediroma.it/opac/.do" target="_blank">Biblioteche di Roma</a></p>
+    </footer>
 </body>
 </html>
