--- a/termini.html
+++ b/termini.html
@@ -102,15 +102,16 @@
            margin-top: 60px;
        }
 
-       .nav-icons {
-           position: absolute;
-           top: -60px;
-           left: 20px;
-           display: flex;
-           align-items: center;
-           gap: 3rem;
-           padding-top: 20px;
-       }
+      .nav-icons {
+    position: absolute;
+    top: -60px;
+    left: 0; /* Changed from left: 20px to left: 0 */
+    display: flex;
+    align-items: center;
+    gap: 1rem; /* Reduced from 3rem to 1rem to bring icons closer */
+    padding-top: 20px;
+    width: 100%; /* Added to ensure full width */
+}
 
        .nav-icons a {
            color: #970a2c;
@@ -133,16 +134,28 @@
            letter-spacing: 0.5rem;
        }
 
-       .nav-icons a:first-child::after {
-           content: '';
-           position: absolute;
-           left: calc(100% + 1.5rem);
-           top: 50%;
-           transform: translateY(-50%);
-           height: 20px;
-           width: 1px;
-           background-color: rgba(128, 128, 128, 0.3);
-       }
+      .nav-icons a:first-child::after {
+    content: '';
+    position: absolute;
+    left: calc(100% + 0.5rem); /* Reduced from 1.5rem */
+    top: 50%;
+    transform: translateY(-50%);
+    height: 20px;
+    width: 1px;
+    background-color: rgba(128, 128, 128, 0.3);
+}
+
+@media (max-width: 768px) {
+    .nav-icons {
+        position: relative;
+        top: 0;
+        left: 0;
+        padding: 0.5rem 0;
+        justify-content: flex-start; /* Changed from center to flex-start */
+    }
+}
+
+      
        
        header img {
            height: 70px;
