--- a/termini.html
+++ b/termini.html
@@ -107,14 +107,14 @@
 .nav-icons {
     position: absolute;
     top: -60px;
-    left: 0; /* Allineato all'inizio del banner */
+    left: calc(50% - 450px); /* Allineato all'inizio del margine della pagina */
     display: flex;
     align-items: center;
     gap: 3rem;
-    padding: 20px 2rem; /* Usa lo stesso padding del top-banner */
-    background-color: #f3f4f6; /* Colore di sfondo grigio chiaro */
-    width: 100%; /* Occupa tutta la larghezza */
+    padding-top: 20px;
 }
+
+      
 
        .nav-icons a {
            color: #970a2c;
