--- a/termini.html
+++ b/termini.html
@@ -95,7 +95,7 @@
 
       
 
-       .content-wrapper {
+     .content-wrapper {
     max-width: 900px;
     width: 100%;
     margin: 2rem auto;
@@ -107,7 +107,7 @@
 .nav-icons {
     position: absolute;
     top: -60px;
-    left: calc(50% - 450px); /* Allineato all'inizio del margine della pagina */
+    left: -20px; /* Sposta decisamente a sinistra */
     display: flex;
     align-items: center;
     gap: 3rem;
